// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExternalStorage: reducer create user on failure 1`] = `
Object {
  "error": "ERROR",
  "uploadList": Array [],
}
`;

exports[`ExternalStorage: reducer create user on request 1`] = `
Object {
  "error": null,
  "uploadList": Array [],
}
`;

exports[`ExternalStorage: reducer create user on success 1`] = `
Object {
  "error": null,
  "uploadList": Array [
    Object {
      "contractAddress": "c918420c68346af5fe2aef067faf7b103afde5ed",
      "createdAt": "2018-06-25T05:37:42.962Z",
      "uri": "https://strato-external-storage.s3.amazonaws.com/1529905060401-widescreen.jpeg",
    },
    Object {
      "contractAddress": "c0d225c56af10ad58eb2c16bd8dfaca3273894ef",
      "createdAt": "2018-06-25T06:57:32.559Z",
      "uri": "https://strato-external-storage.s3.amazonaws.com/1529909829846-jellyfish-25-mbps-hd-hevc.3gp",
    },
    Object {
      "contractAddress": "51a867e95aa68efcd2c320352e0861e4f015af88",
      "createdAt": "2018-06-25T07:35:01.058Z",
      "uri": "https://strato-external-storage.s3.amazonaws.com/1529912097617-soap-bubble-1958650_960_720.jpg",
    },
    Object {
      "contractAddress": "9c22ec56dd721cd3ca138dc1d1a05d567e019e36",
      "createdAt": "2018-06-25T08:28:53.139Z",
      "uri": "https://strato-external-storage.s3.amazonaws.com/1529915329415-widescreen.jpeg",
    },
    Object {
      "contractAddress": "edf7fa43718c27d10e6d49bfa8d8942578cc1a87",
      "createdAt": "2018-06-25T10:43:56.089Z",
      "uri": "https://strato-external-storage.s3.amazonaws.com/1529923413618-SampleVideo_360x240_30mb.mkv",
    },
    Object {
      "contractAddress": "9479054a30b89cdd4a512e127049deb042e7e199",
      "createdAt": "2018-06-25T11:08:54.468Z",
      "uri": "https://strato-external-storage.s3.amazonaws.com/1529924931049-widescreen.jpeg",
    },
    Object {
      "contractAddress": "132b62b6b32660aeb707aaed5bfd4cbaed9eb81b",
      "createdAt": "2018-06-25T11:20:00.638Z",
      "uri": "https://strato-external-storage.s3.amazonaws.com/1529925597965-widescreen.jpeg",
    },
    Object {
      "contractAddress": "57ffd407be86add24fb9ff6125708494b7c09a25",
      "createdAt": "2018-06-25T13:04:55.881Z",
      "uri": "https://strato-external-storage.s3.amazonaws.com/1529931868271-1529923413618-SampleVideo_360x240_30mb.mkv",
    },
    Object {
      "contractAddress": "2425395e37a3623de0f1f6e87781cb9e39fba179",
      "createdAt": "2018-06-25T13:44:27.411Z",
      "uri": "https://strato-external-storage.s3.amazonaws.com/1529934246777-jellyfish-25-mbps-hd-hevc.3gp",
    },
    Object {
      "contractAddress": "b928fe10d9d9ece8755b93dfddc32eb1c6db3fe7",
      "createdAt": "2018-06-25T13:45:30.725Z",
      "uri": "https://strato-external-storage.s3.amazonaws.com/1529934327270-soap-bubble-1958650_960_720.jpg",
    },
    Object {
      "contractAddress": "9d5fdf1738593c2f93f098b55a765485a1574d1f",
      "createdAt": "2018-06-26T07:52:06.094Z",
      "uri": "https://strato-external-storage.s3.amazonaws.com/1529999523270-widescreen.jpeg",
    },
  ],
}
`;

exports[`ExternalStorage: reducer set initial state 1`] = `
Object {
  "error": null,
  "uploadList": Array [],
}
`;
